Fix TypeScript errors in backend

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,8 @@
     "forceConsistentCasingInFileNames": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
+    "types": ["node", "express", "multer"]
   }
 }
